# python-interface-coppeliasim-vrep

./: .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/scripts/: basic_test.py  basic_test.sh
.github/workflows/: python_package.yaml  update_submodules.yaml
dqrobotics/interfaces/vrep/: __init__.py
dqrobotics/interfaces/vrep/robots/: __init__.py
src/: modules.cpp  modules.h
src/interfaces/vrep/: DQ_SerialVrepRobot_py.cpp  DQ_VrepInterface_py.cpp  DQ_VrepRobot_py.cpp
